--- a/login register/form.html
+++ b/login register/form.html
@@ -3,8 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Login/Register</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover"><link rel="stylesheet" href="./style.css">
-<link rel="stylesheet" href="'styles.css">
+<link rel="stylesheet" href="styles.css">
 </head>
 <body>
 	<section class="forms-section">
@@ -55,7 +54,7 @@
 		  </div>
 		</div>
 	  </section>
-	  <script src="'script.js'</script>
+	  <script src="script.js"></script>
 </body>
 </html>
             
